--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "bit-docs-type-annotate": "^0.0.1"
   },
   "devDependencies": {
-    "bit-docs-generate-html": "0.5.0-pre.3",
-    "connect": "^2.14.4",
-    "mocha": "^2.5.3",
+    "bit-docs-generate-html": "0.5.0-pre.4",
+    "connect": "^3.6.1",
+    "mocha": "^3.2.0",
+    "serve-static": "^1.12.1",
     "steal": "^1.4.6",
     "steal-less": "^1.2.0",
     "steal-qunit": "^1.0.1",
-    "zombie": "^4.2.1"
+    "zombie": "^5.0.5"
   }
 }
