--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bit-docs-generate-html": "0.5.0-pre.4",
     "express": "^4.15.2",
     "mocha": "^3.2.0",
+    "rimraf": "^2.6.1",
     "steal": "^1.4.6",
     "steal-less": "^1.2.0",
     "steal-qunit": "^1.0.1",
