--- a/package.json
+++ b/package.json
@@ -21,16 +21,12 @@
     "release:minor": "npm version minor && npm publish",
     "release:patch": "npm version patch && npm publish",
     "release:pre": "npm version prerelease && npm publish",
-    "test": "mocha test.js --reporter spec",
+    "test": "mocha test/test.js --reporter spec",
     "preversion": "npm test",
     "postversion": "git push --tags && git push"
   },
   "devDependencies": {
     "bit-docs-generate-html": "0.5.0-pre.4",
-    "can-define": "1.0.17",
-    "can-stache": "3.0.20",
-    "can-view-autorender": "3.0.4",
-    "can-view-model": "3.1.3",
     "express": "^4.15.2",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
