--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
+dist: trusty
 language: node_js
 node_js: node
+addons:
+  chrome: stable
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
